--- a/package.json
+++ b/package.json
@@ -9,30 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/core": "^0.22.0",
-    "@auth/mongodb-adapter": "^2.0.14",
+    "@auth/core": "^0.26.3",
+    "@auth/mongodb-adapter": "^2.3.3",
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.6",
-    "@mui/material-nextjs": "^5.15.6",
+    "@mui/icons-material": "^5.15.9",
+    "@mui/material-nextjs": "^5.15.9",
     "bcrypt": "^5.1.1",
-    "joi": "^17.12.0",
+    "joi": "^17.12.1",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.4.4",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
     "next": "14.1.0",
-    "next-auth": "^5.0.0-beta.5",
+    "next-auth": "^5.0.0-beta.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/node": "^20.11.6",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
-    "@typescript-eslint/eslint-plugin": "^6.19.1",
-    "@typescript-eslint/parser": "^6.19.1",
+    "@types/luxon": "^3.4.2",
+    "@types/node": "^20.11.7",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
     "typescript": "^5.3.3"
