--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.9",
     "@mui/material-nextjs": "^5.15.9",
+    "@vis.gl/react-google-maps": "^0.6.1",
     "bcrypt": "^5.1.1",
     "joi": "^17.12.1",
-    "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
