--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@auth/core": "^0.26.3",
     "@auth/mongodb-adapter": "^2.3.3",
+    "@aws-sdk/client-s3": "^3.513.0",
+    "@aws-sdk/s3-request-presigner": "^3.513.0",
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
