--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vis.gl/react-google-maps": "^0.6.1",
     "bcrypt": "^5.1.1",
     "joi": "^17.12.1",
+    "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/luxon": "^3.4.2",
     "@types/node": "^20.11.7",
     "@types/react": "^18.2.55",
