--- a/package.json
+++ b/package.json
@@ -3,46 +3,46 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/core": "^0.27.0",
-    "@auth/mongodb-adapter": "^2.4.0",
-    "@aws-sdk/client-s3": "^3.515.0",
-    "@aws-sdk/s3-request-presigner": "^3.515.0",
-    "@deck.gl/google-maps": "^8.9.34",
-    "@deck.gl/layers": "^8.9.34",
+    "@auth/core": "^0.28.0",
+    "@auth/mongodb-adapter": "^2.5.0",
+    "@aws-sdk/client-s3": "^3.525.0",
+    "@aws-sdk/s3-request-presigner": "^3.525.0",
+    "@deck.gl/google-maps": "^8.9.35",
+    "@deck.gl/layers": "^8.9.35",
     "@emotion/cache": "^11.11.0",
-    "@emotion/react": "^11.11.3",
+    "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.9",
-    "@mui/material-nextjs": "^5.15.9",
-    "@vis.gl/react-google-maps": "^0.7.0",
+    "@mui/icons-material": "^5.15.12",
+    "@mui/material-nextjs": "^5.15.11",
+    "@vis.gl/react-google-maps": "^0.7.1",
     "bcrypt": "^5.1.1",
-    "joi": "^17.12.1",
+    "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
-    "mongodb": "^6.3.0",
-    "mongoose": "^8.1.3",
-    "next": "14.1.0",
-    "next-auth": "^5.0.0-beta.11",
+    "mongodb": "^6.4.0",
+    "mongoose": "^8.2.1",
+    "next": "14.1.2",
+    "next-auth": "^5.0.0-beta.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.5",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/luxon": "^3.4.2",
-    "@types/node": "^20.11.19",
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
+    "@types/node": "^20.11.24",
+    "@types/react": "^18.2.63",
+    "@types/react-dom": "^18.2.20",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.1.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.1.2",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.5",
