--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,8 +11,8 @@
   "dependencies": {
     "@auth/core": "^0.28.0",
     "@auth/mongodb-adapter": "^2.5.0",
-    "@aws-sdk/client-s3": "^3.525.0",
-    "@aws-sdk/s3-request-presigner": "^3.525.0",
+    "@aws-sdk/client-s3": "^3.529.1",
+    "@aws-sdk/s3-request-presigner": "^3.529.1",
     "@deck.gl/google-maps": "^8.9.35",
     "@deck.gl/layers": "^8.9.35",
     "@emotion/cache": "^11.11.0",
@@ -27,7 +27,7 @@
     "luxon": "^3.4.4",
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.1",
-    "next": "14.1.2",
+    "next": "14.1.3",
     "next-auth": "^5.0.0-beta.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -36,16 +36,16 @@
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/luxon": "^3.4.2",
-    "@types/node": "^20.11.24",
-    "@types/react": "^18.2.63",
-    "@types/react-dom": "^18.2.20",
+    "@types/node": "^20.11.25",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.1.2",
+    "eslint-config-next": "14.1.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.5",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.2"
   }
 }
