--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.12",
     "@mui/material-nextjs": "^5.15.11",
+    "@mui/x-date-pickers": "^7.0.0",
     "@vis.gl/react-google-maps": "^0.7.1",
     "bcrypt": "^5.1.1",
     "joi": "^17.12.2",
