--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,8 @@
 				"singleQuote": true,
 				"semi": true,
 				"useTabs": true,
-				"trailingComma": "es5"
+				"trailingComma": "es5",
+				"endOfLine": "auto"
 			}
 		]
 	},
